--- a/index.html
+++ b/index.html
@@ -6,26 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="text/css" media="screen" href="clear.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/main.css" />
 </head>
 
 <body>
-    <content>
         <nav class="navbar navbar-white bg-white">
             <a class="navbar-nav flex-row ml-md-5 mr-md-auto px-5 name" href="index.html">Wes Kruger</a>
 
             <ul class="navbar-nav flex-row ml-md-auto links">
                 <li class="nav-item active">
-                    <a class="nav-link d-inline-flex" href="index.html">Profile
-                        <span class="border-right ml-2">
-                    </a>
-                    <a class="nav-link d-inline-flex" href="contact.html">Contact
-                        <span class="border-right ml-2"></span>
-                    </a>
-                    <a class="nav-link d-inline-flex" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link d-inline-flex" href="index.html">Profile<span class="border-right ml-2"></span></a>
+                    <a class="nav-link d-inline-flex" href="portfolio.html">Portfolio<span class="border-right ml-2"></span></a>
+                    <a class="nav-link d-inline-flex" href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -40,16 +34,22 @@
                         <hr>
                         <img src="assets/images/wesKruger.jpg" class="float-left" alt="profile picture">
                         <p class="bd-lead">
-                            I grew up in San Antonio, Texas, and attended college at the University of Texas at Austin. My educational background is
-                            in government and business administration. Since graduating, I have worked as a software consultant
-                            for government tax agencies in Washington, D.C., and in Santa Fe, New Mexico. I'm thrilled to
-                            have finally been able to move back to my home state! In my spare time, I enjoy working out,
-                            reading, listening to podcasts, and playing games with friends.
+                            I grew up in San Antonio, Texas, and attended college at the University of Texas at Austin.
+                            My educational background is
+                            in government and business administration. Since graduating, I have worked as a software
+                            consultant
+                            for government tax agencies in Washington, D.C., and in Santa Fe, New Mexico. I'm thrilled
+                            to
+                            have finally been able to move back to my home state! In my spare time, I enjoy working
+                            out,
+                            reading, and listening to podcasts.
                         </p>
                         <p>
-                            While my professional experience is in developing software, I have little formal education in coding and computer science.
-                            I see a strong future in web development, and have am interested in learning its rapidly-developing
-                            technologies. I am currently enrolled in a coding bootcamp at the University of Texas, and am
+                            While my professional experience is in developing software on the back-end, I am working to also master front-end development.
+                            I see a strong future in web development, and have am interested in learning its
+                            rapidly-developing
+                            technologies. I am currently enrolled in a coding bootcamp at the University of Texas, and
+                            am
                             working hard to master these skills.
                         </p>
                     </main>
@@ -81,7 +81,6 @@
                 </div>
             </div>
         </footer>
-    </content>
 </body>
 
 </html>
