--- a/portfolio.html
+++ b/portfolio.html
@@ -6,103 +6,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="text/css" media="screen" href="clear.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/main.css" />
 </head>
 
 <body>
-    <content>
-        <nav class="navbar navbar-white bg-white">
-            <a class="navbar-nav flex-row ml-md-5 mr-md-auto px-5 name" href="index.html">Wes Kruger</a>
+    <nav class="navbar navbar-white bg-white">
+        <a class="navbar-nav flex-row ml-md-5 mr-md-auto px-5 name" href="index.html">Wes Kruger</a>
 
-            <ul class="navbar-nav flex-row ml-md-auto links">
-                <li class="nav-item active">
-                    <a class="nav-link d-inline-flex" href="index.html">Profile
-                        <span class="border-right ml-2">
-                    </a>
-                    <a class="nav-link d-inline-flex" href="contact.html">Contact
-                        <span class="border-right ml-2"></span>
-                    </a>
-                    <a class="nav-link d-inline-flex" href="portfolio.html">Portfolio</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="navbar-nav flex-row ml-md-auto links">
+            <li class="nav-item active">
+                <a class="nav-link d-inline-flex" href="index.html">Profile<span class="border-right ml-2"></span></a>
+                <a class="nav-link d-inline-flex" href="portfolio.html">Portfolio<span class="border-right ml-2"></span></a>
+                <a class="nav-link d-inline-flex" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
 
-        <div class="container-fluid ml-0 mr-0">
-            <div class="row bg-white ml-md-5 mr-md-2 mt-4">
-                <span class="border col-12 border-dark">
-                    <main class="col-12 py-md-3 pl-md-3 bd-content" role="main">
-                        <h1 class="bd-title">
-                            Portfolio
-                        </h1>
-                        <hr>
-                        <div class="row bg-white">
-                            <div class="col-12 py-md-3 pl-md-3 bd-content">
-                                <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px;">
-                                    <img class="card-img-top" src="http://via.placeholder.com/280x200" alt="hangman placeholder">
+    <div class="container-fluid ml-0 mr-0">
+        <div class="row bg-white ml-md-5 mr-md-2 mt-4">
+            <span class="border col-12 border-dark">
+                <main class="col-12 py-md-3 pl-md-3 bd-content" role="main">
+                    <h1 class="bd-title">
+                        Portfolio
+                    </h1>
+                    <hr>
+                    <div class="row">
+                        <div class="col-6 py-md-3 pl-md-3 bd-content">
+                            <a href="https://wesleykruger.github.io/Election-Info-Site/" target="_blank">
+                                <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 320;">
+                                    <img class="card-img-top" src="assets/images/Couch Polltato.PNG" alt="Couch Polltato"
+                                        style="width:319px;">
                                     <div class="card-body">
-                                        <h5 class="card-title">Hangman</h5>
+                                        <a href="https://github.com/wesleykruger/Election-Info-Site" target="_blank">
+                                            <h5 class="card-title">Couch Poll-tato: Election Information Site</h5>
+                                        </a>
                                     </div>
-                                </div>
-                                <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px;">
-                                    <img class="card-img-top" src="http://via.placeholder.com/280x200" alt="rpg placeholder">
-                                    <div class="card-body">
-                                        <h5 class="card-title">RPG Game</h5>
-                                    </div>
-                                </div>
-                                <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px;">
-                                    <img class="card-img-top" src="http://via.placeholder.com/280x200" alt="trivia placeholder">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Trivia Game</h5>
-                                    </div>
-                                </div>
-                                <div class="card d-inline-flex mr-md-5 mb-lg-0 mb-5" style="width: 280px;">
-                                    <img class="card-img-top" src="http://via.placeholder.com/280x200" alt="rutgers placeholder">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Rutgers Info Widget</h5>
-                                    </div>
-                                </div>
-                                <div class="card d-inline-flex mr-md-5" style="width: 280px;">
-                                    <img class="card-img-top" src="http://via.placeholder.com/280x200" alt="rps placeholder">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Rock Paper Scissors</h5>
-                                    </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-6 py-md-3 pl-md-3 bd-content">
+                        <a href="https://wesleykruger.github.io/Word-Guess-Game/" target="_blank">
+                            <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
+                                <img class="card-img-top" src="assets/images/Hangman.PNG" alt="hangman" style="width:280px;height: 279px;">
+                                <div class="card-body">
+                                    <a href="https://github.com/wesleykruger/Word-Guess-Game" target="_blank">
+                                        <h5 class="card-title">Hangman Game</h5>
+                                    </a>
                                 </div>
                             </div>
-                        </div>
-            </div>
-            </main>
-            </span>
-        </div>
-        <div class="row flex-xl-nowrap ml-md-5 mr-md-auto mt-3">
-            <span class="border border-dark">
-                <div class="col-12 bg-white p-3">
-                    <a href="https://www.github.com/wesleykruger" target="_blank">
-                        <img src="assets/images/githubIcon.png" height="55" width="55" alt="github icon">
-                    </a>
-                    <a href="https://www.linkedin.com/in/wes-kruger-b54135a4/" target="_blank">
-                        <img src="assets/images/linkedInIcon.png" height="55" width="55" alt="linkedin icon">
-                    </a>
-                    <a href="https://stackoverflow.com/users/10048090/w-kruger" target="_blank">
-                        <img src="assets/images/stackOverflowIcon.png" height="55" width="55" alt="stackoverflow icon">
-                    </a>
-                </div>
-            </span>
-        </div>
-        </div>
-
-        <footer class="text-white mt-4">
-            <div class="container-fluid pt-3">
-                <div class="row">
-                    <div class="col-12">
-                        ©2018 Wes Kruger
+                        </a>
                     </div>
+        </div>
+        <div class="row">
+            <div class="col-6 py-md-3 pl-md-3 bd-content">
+                <a href="https://wesleykruger.github.io/unit-4-game/" target="_blank">
+                    <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
+                        <img class="card-img-top" src="assets/images/Gym Quest.PNG" alt="rpg placeholder" style="width:280px;height: 279px;">
+                        <div class="card-body">
+                            <a href="https://github.com/wesleykruger/unit-4-game" target="_blank">
+                                <h5 class="card-title">Gym Quest - A Simple RPG</h5>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 py-md-3 pl-md-3 bd-content">
+                <a href="https://wesleykruger.github.io/train-scheduler/" target="_blank">
+                    <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
+                        <img class="card-img-top" src="assets/images/Train.PNG" alt="trivia placeholder" style="width:280px;height: 279px;">
+                        <div class="card-body">
+                            <a href="https://github.com/wesleykruger/train-scheduler" target="_blank">
+                                <h5 class="card-title">Train Scheduler (Firebase testing)</h5>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        </main>
+        </span>
+    </div>
+
+    <div class="row flex-xl-nowrap ml-md-5 mr-md-auto mt-3">
+        <span class="border border-dark">
+            <div class="col-12 bg-white p-3">
+                <a href="https://www.github.com/wesleykruger" target="_blank">
+                    <img src="assets/images/githubIcon.png" height="55" width="55" alt="github icon">
+                </a>
+                <a href="https://www.linkedin.com/in/wes-kruger-b54135a4/" target="_blank">
+                    <img src="assets/images/linkedInIcon.png" height="55" width="55" alt="linkedin icon">
+                </a>
+                <a href="https://stackoverflow.com/users/10048090/w-kruger" target="_blank">
+                    <img src="assets/images/stackOverflowIcon.png" height="55" width="55" alt="stackoverflow icon">
+                </a>
+            </div>
+        </span>
+    </div>
+    </div>
+
+    <footer class="text-white mt-4">
+        <div class="container-fluid pt-3">
+            <div class="row">
+                <div class="col-12">
+                    ©2018 Wes Kruger
                 </div>
             </div>
-        </footer>
-    </content>
+        </div>
+    </footer>
 </body>
 
 </html>
