added friend finder app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,6 +85,20 @@
                 </a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-6 py-md-3 pl-md-3 bd-content">
+                <a href="https://wkruger-friend-finder.herokuapp.com/" target="_blank">
+                    <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
+                        <img class="card-img-top" src="assets/images/friendFinder.PNG" alt="hangman" style="width:280px;height: 279px;">
+                        <div class="card-body">
+                            <a href="https://github.com/wesleykruger/FriendFinder" target="_blank">
+                                <h5 class="card-title">Friend Finder Application</h5>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
         </main>
         </span>
     </div>
