adding burger project

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,6 +98,18 @@
                     </div>
                 </a>
             </div>
+            <div class="col-6 py-md-3 pl-md-3 bd-content">
+                <a href="https://wkruger-burger.herokuapp.com/" target="_blank">
+                    <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
+                        <img class="card-img-top" src="assets/images/burger.PNG" alt="hangman" style="width:280px;height: 279px;">
+                        <div class="card-body">
+                            <a href="https://github.com/wesleykruger/burger" target="_blank">
+                                <h5 class="card-title">Burger Barn Database</h5>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
         </main>
         </span>
