adding google-reading-list project

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,6 +111,18 @@
                 </a>
             </div>
             <div class="col-6 py-md-3 pl-md-3 bd-content">
+                <a href="https://wkruger-google-book-search.herokuapp.com/" target="_blank">
+                    <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
+                        <img class="card-img-top" src="assets/images/readingList.PNG" alt="hangman" style="width:280px;height: 279px;">
+                        <div class="card-body">
+                            <a href="https://github.com/wesleykruger/google-books-search" target="_blank">
+                                <h5 class="card-title">React Reading List Using Google Books API</h5>
+                            </a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 py-md-3 pl-md-3 bd-content">
                 <a href="https://wesleykruger.github.io/React-Click-Game/" target="_blank">
                     <div class="card d-inline-flex mr-md-5 mb-5" style="width: 280px; height: 360;">
                         <img class="card-img-top" src="assets/images/HarryPotter.PNG" alt="hangman" style="width:280px;height: 279px;">
